karl package Changelog
======================

Unreleased
----------

- LP #409495: Fix broken General KARL Error Screen in IE

- Disabled browser form autocomplete in the add user form (without this,
  the browser fills the password field with the current user's password).

- Log more info about dropped email messages.

3.8 (2009-08-06)
----------------

- Removed OSI-specific change password link logic from edit_profile view.

- The peopleconf utility now has the option to force reindexing of the
  people directory catalog.

- LP #409408: IE refuses to download files over HTTPS when the
  Cache-Control header specifies no-cache or no-store.  Switched to
  "private, must-revalidate", which seems to be the generally
  recommended header for dynamic apps.

- LP #409499: Reference Manual delete produces TypeError


3.7 (2009-08-04)
----------------

- LP #407445: Provide rounded corners on tag boxes in IE

- LP #403648: Fix right margin in IE on anonymous layout

- Use the newer ISecurityWorkflow API (pass request in to all relevant
  methods).

- Allow communities to be transitioned from private to public; show a
  warning when someone clicks the public button if the private button
  is already clicked.

- LP #404205: For the new people directory, renamed the unconfigured
  "All KARL" tab to "All".  Use peopledirectory.xml to configure it.
  Also added the ability to filter reports by arbitrary (but fixed)
  catalog query parameters.

- LP #408156: Added a catalog index that makes it possible to show
  only non-staff in a people directory report.

- LP #405361: Selecting a letter in the new people directory did not
  survive pagination.

- Partial solution to LP #407017: disable autocomplete in
  admin_edit_profile.html and validate changes to home_path.

- Added reverse look up for countries.

- LP #407510: Show all fields in admin_edit_profile.html.

- Enabled text relevance ranking in search results.

3.6 (2009-07-23)
----------------
